--- a/dashboard/templates/eventos.html
+++ b/dashboard/templates/eventos.html
@@ -1,10 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
 {% load static %}
-
 <div class="container">
 
   <h1>Eventos</h1>
+
+  <div class="range-field">
+      <div class="flex space-between">
+        <p>Médicos generalistas </p>
+        <p class="family_doctor">Médicos de família</p>
+      </div>
+      <div class="range-box">
+        <p><span id="generalistas">67</span>% </p>
+        <input type="range" id="alcance" min="0" max="100" value="33"/>
+        <p class="family_doctor"><span id="medicosDeFamilia"> 33</span>%  </p>
+      </div>
+      
+  </div>
+  <p id="texto-resultado">
+  <div id="graphic"></div>
+
+
   <table>
     <thead>
         <tr>
@@ -37,5 +53,54 @@
     </tbody>
   </table>
 </div>
+
+<script>
+
+  let data = '{{ data | safe }}'
+  data = JSON.parse(data)
+  // set the dimensions and margins of the graph
+const margin = {top: 20, right: 30, bottom: 40, left: 90},
+    width = (0.7* window.innerWidth) - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+// append the svg object to the body of the page
+const svg = d3.select("#graphic")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", `translate(${margin.left}, ${margin.top})`);
+
+
+  // Add X axis
+  const x = d3.scaleLinear()
+    .domain([0, d3.max(data, (d) => parseInt(d["value"]))])
+    .range([ 0, width]);
+  svg.append("g")
+    .attr("transform", `translate(0, ${height})`)
+    .call(d3.axisBottom(x))
+    .selectAll("text")
+      .attr("transform", "translate(-10,0)rotate(-45)")
+      .style("text-anchor", "end");
+
+  // Y axis
+  const y = d3.scaleBand()
+    .range([ 0, height ])
+    .domain(data.map(d => d.name))
+    .padding(.1);
+  svg.append("g")
+    .call(d3.axisLeft(y))
+
+  //Bars
+  svg.selectAll("myRect")
+    .data(data)
+    .join("rect")
+    .attr("x", x(0) )
+    .attr("y", d => y(d.name))
+    .attr("width", d => x(d.value))
+    .attr("height", y.bandwidth())
+    .attr("fill", "#146173")
+    
+</script>
 
 {% endblock %}
